--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,11 +12,20 @@ body {
 main {
   flex: 1;
 }
+.btn-primary {
+  background-color: #f0c040;
+  color: #000000;
+}
 .products {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
+
+.rating span {
+  color: #ffc000;
+}
+
 .product {
   border: 1px #404040 solid;
   margin: 1rem;
@@ -24,6 +33,12 @@ main {
 .product img {
   width: 100%;
   max-width: 400px;
+}
+.card-img,
+.card-img-top {
+  border-top-left-radius: calc(0.25rem - 1px);
+  border-top-right-radius: calc(0.25rem - 1px);
+  height: 400px;
 }
 .product-info {
   padding: 1rem;
